# homelab-log-watcher

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: container.yml
homelab_log_watcher/: __init__.py  __main__.py  config.py  fingerprint.py  server.py  state.py  watcher.py
tests/: test_log_watcher.py
